--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-h1 {
+body{
+background-image: url(As-melhores-praias-de-Santa-Catarina-1110x508.jpg);}
+h1 { 
     text-align: center;
 font-size: 30px;
 } 
